# personal-box-freertos-demo

./: .gitmodules  CMakeLists.txt  README.md
amazon-freertos-configs/: aws_clientcredential.h  aws_clientcredential_keys.h  aws_demo_config.h  iot_config.h
include/: app_network.h  controller.h  device.h  shadow_client.h
src/: app_network.c  controller.c  device.c  main.c  shadow_client.c
